--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -3,7 +3,6 @@ on:
   pull_request:
     types:
       - labeled
-      - ready_for_review
   pull_request_review:
     types:
       - submitted
@@ -24,3 +23,5 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "Stale"
+          MERGE_REMOVE_LABELS: "Stale"
+          MERGE_METHOD: "squash"
