--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -26,10 +26,10 @@ jobs:
           version: v1.29
 
           # Optional: working directory, useful for monorepos
-          # working-directory: go/...
+          working-directory: /go
 
           # Optional: golangci-lint command line arguments.
-          args: --config ./.github/workflows/golangci-lint.yml ./... ./go
+          # args: --config ./.github/workflows/golangci-lint.yml ./... ./go
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
